<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollIndicators="none"
    tools:context=".view.fragment.BerandaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginBottom="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:id="@+id/ll_profile"
            android:paddingTop="20dp"
            android:background="@drawable/blue_linier_main_menu_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:id="@+id/ll_photo_profile"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:id="@+id/tv_tgl"
                    android:textColor="#FFFFFF"
                    android:text="Jumat 20 sep 2020" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/iv_profile"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_sample"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll_photo_profile"
                android:paddingRight="20dp"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/tv_name"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="end"
                    android:text="@string/dr_lita_sari" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/tv_announcement"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="end"
                    android:text="Semangat ya kerjanya hari ini"
                    android:layout_marginTop="10dp" />

                <com.ncorti.slidetoact.SlideToActView
                    android:id="@+id/sliderAct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:slider_height="40dp"
                    android:layout_marginBottom="15dp"
                    app:area_margin="3dp"
                    app:text_size="10sp"
                    app:icon_margin="7dp"
                    app:slider_icon_color="@color/white"
                    app:inner_color="@color/red_button"
                    app:text_color="@color/white"
                    android:background="@drawable/red_background_slide"
                    app:outer_color="@android:color/transparent"
                    app:text="SLIDE TO CLOCK IN"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_profile"
            android:id="@+id/ll_absensi"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/ll_shift_status"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shift"
                    android:textSize="16sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pagi"
                    android:id="@+id/tv_shift_isi"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_shift_status"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/ll_jadwal_masuk"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masuk"
                    android:textSize="16sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08_00_00"
                    android:textSize="16sp"
                    android:id="@+id/tv_jadwal_masuk_isi"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@id/ll_jadwal_masuk"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pulang"
                    android:textSize="16sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_17_00_00"
                    android:textSize="16sp"
                    android:id="@+id/tv_jadwal_pulang_isi"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terlambat"
                    android:textSize="16sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00_00"
                    android:textSize="16sp"
                    android:id="@+id/tv_terlambat_isi"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_absensi"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:id="@+id/rl_jarak_absensi"
            android:background="@drawable/location_distance_corner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:id="@+id/tv_jarak_label"
                android:textSize="12sp"
                android:layout_centerVertical="true"
                android:text="@string/jarak_menuju_lokasi_absensi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="12sp"
                android:id="@+id/tv_jarak_lokasi"
                android:layout_toRightOf="@id/tv_jarak_label"
                android:layout_marginLeft="5dp"
                android:text="@string/_1200_m"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv_jarak_label"
                android:layout_marginStart="5dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/iv_refresh_location"
                android:src="@drawable/icon_refresh"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rl_jarak_absensi"
            app:tabBackground="@drawable/tab_bg_color"
            app:tabSelectedTextColor="#FFFFFF"
            app:tabTextColor="#000000"
            android:id="@+id/tab_layout"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:tabTextAppearance="@style/TabTheme"
            app:tabRippleColor="@color/transparent_color"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            app:tabIndicatorColor="@android:color/holo_red_light"
            app:tabIndicatorHeight="0dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tukar_shift" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuti" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lembur" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absen" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/rv_select_tab"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>