<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_dekaforyou"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_login"/>

    <TextView
        android:id="@+id/tv_dekaforyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dekaforyou"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rl_email"
        android:layout_margin="50dp"
        android:textColor="#FFFFFF" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_corner"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/rl_password"
        android:paddingRight="10dp"
        android:paddingLeft="15dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:id="@+id/et_username"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textColorHint="#64FFFFFF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_email_true"/>

        <ImageView
            android:id="@+id/iv_email_true"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:visibility="gone"
            android:src="@drawable/check_valid_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_corner"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:id="@+id/rl_password"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
        android:paddingRight="10dp"
        android:paddingLeft="15dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:textColorHint="#64FFFFFF"
            android:background="@null"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_show_password"/>

        <TextView
            android:id="@+id/tv_show_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/show"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@null"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/blue_linier_button"
        app:layout_constraintBottom_toTopOf="@id/tv_or"
        android:layout_marginBottom="20dp"
        />

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintBottom_toTopOf="@id/tv_or"
        android:background="#FFFFFF"
        android:alpha="0.3"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="5dp" />

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintBottom_toTopOf="@id/tv_or"
        android:background="#FFFFFF"
        android:alpha="0.3"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/btn_continue_fb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_continue_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_lupa_password"
        android:background="@drawable/fb_button"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/continue_with_facebook"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:id="@+id/tv_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/lupa_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#FFFFFF"
        android:textAllCaps="true"
        android:alpha="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>